<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soccer_ball"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/default_team_a"
                android:textColor="@android:color/white"
                android:textSize="@dimen/team_name_text_size" />


            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/medium_padding"
                android:text="@string/default_score"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:onClick="addGoalForTeamA"
                android:text="@string/score_goal" />

            <TextView
                android:id="@+id/team_a_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/small_padding"
                android:text="0"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/very_small_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:onClick="addFoulForTeamA"
                android:text="@string/foul" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/default_team_b"
                android:textColor="@android:color/white"
                android:textSize="@dimen/team_name_text_size" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/medium_padding"
                android:text="@string/default_score"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/score_text_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:onClick="addGoalForTeamB"
                android:text="@string/score_goal" />

            <TextView
                android:id="@+id/team_b_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/small_padding"
                android:text="0"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/very_small_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:onClick="addFoulForTeamB"
                android:text="@string/foul" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/simulate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="00:00"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/simulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/reset"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="simulation"
        android:text="@string/simulate" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset" />


</RelativeLayout>